[package]
name = "ruuid"
version = "0.2.0"
authors = ["unrahul <rahulunair@gmail.com>"]
edition = "2018"
description = "A fast UUID generator for Python using Rust"
readme = "README.md"
documentation = "https://github.com/rahulunair/ruuid/README.md"
license = "BSD-3-Clause"
keywords = ["uuid", "hash"]

[lib]
name = "ruuid"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.13.2", features = ["extension-module"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
